--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <meta name="description" content="Converts referrals to MDMs" />
     <meta name="version" content="0.1.9">
     <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon" />
-    <link href="http://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />
+    <!--<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />-->
     <!-- https://nostalgic-css.github.io/NES.css/ -->
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
     <style>
+      @font-face {
+        font-family: 'Press Start 2P';
+        font-style: normal;
+        font-weight: 400;
+        src: local('Press Start 2P Regular'), local('PressStart2P-Regular'), url(http://fonts.gstatic.com/s/pressstart2p/v8/e3t4euO8T-267oIAQAu6jDQyK3nVivNm4I81.woff2) format('woff2');
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      
       body, h1 {
         font-family: "Press Start 2P", arial, sans-serif;
         margin: 2em;
