IE11 font compatibility

--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <meta name="description" content="Converts referrals to MDMs" />
     <meta name="version" content="0.1.9">
     <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon" />
-    <!--<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />-->
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- https://nostalgic-css.github.io/NES.css/ -->
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-      
       body, h1 {
-        font-family: "Press Start 2P", arial, sans-serif;
+        font-family: 'Press Start 2P', arial, cursive;
         margin: 2em;
       }
 
