🕷💡 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
       .icon-list > .blur-filter {
         filter: blur(10px);
       }
+      
+      *:not(input) {
+        -ms-user-select: none;
+      }
 
       footer {
         margin-top: 3em;
