Dedication to Yin

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
   </head>
   <body>
     <main class="container">
-      <h1>GONC MDMer</h1>
+      <h1>
+        GONC MDMer
+        <span class="dedication">
+          Dedicated to Yin - longest-lasting GONC Reg 9/12/19 to 1/2/21
+        </span>
+      </h1>
       <section class="message-list">
         <section class="message -left">
           <i class="nes-mario"></i>
