🌮🎮 Hide unused MDM list pastebox

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Converts referrals to MDMs and checks against the MDM list" />
-    <meta name="version" content="1.0RC">
+    <meta name="version" content="1.01">
 
     <link id="favicon" rel="icon" href="favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -32,7 +32,6 @@
           Dedicated to Yin - longest-lasting GONC Reg 9/12/19 to 1/2/21
         </span>
       </h1>
-      
       <section class="message-list">
         <section class="message -left">
           <i class="nes-mario"></i>
@@ -59,7 +58,7 @@
       <section class="nes-container with-title is-centered" id="mdmFileDropArea">
         <p class="title">List Checker</p>
         <section class="message-list">
-          <section class="message -left">
+          <section class="message -left" style="display: none;">
             <i class="nes-ash"></i>
             <div class="nes-balloon from-left">
               <div class="nes-field">
