--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Converts referrals to MDMs and checks against the MDM list" />
-    <meta name="version" content="1.2">
+    <meta name="author" content="Sam Holford - Operating Systems Ltd">
+    <meta name="version" content="1.3">
 
     <link id="favicon" rel="icon" href="favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="lib/nes.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
-    <script src="lib/docxtemplater-3.40.2.js"></script>
-    <script src="lib/pizzip-3.1.1.js"></script>
+    <script src="lib/docxtemplater-3.61.1.min.js"></script>
+    <script src="lib/pizzip-3.1.8.min.js"></script>
     <script src="lib/FileSaver-2.0.4.js"></script>
-    <script src="lib/pizzip-utils-3.1.1.js"></script>
-    <script src="lib/moment-2.29.4.min.js"></script>
+    <script src="lib/pizzip-utils-3.1.8.min.js"></script>
+    <script src="lib/moment-2.30.1.min.js"></script>
   </head>
   <body>
     <main class="container">
@@ -67,7 +68,7 @@
 
           <section class="message -right">
             <div class="nes-balloon from-right">
-              <p>Drop all of the completed MDM templates here (docx format)</p>
+              <p>Drop all lists and MDM reports here (docx format)</p>
             </div>
             <i class="nes-squirtle"></i>
           </section>
@@ -115,8 +116,10 @@
     </main>
 
     <footer>
-      No data is tramitted across the internet.<br>
-      View source on <a href="https://github.com/samholford/gonc-mdmer">GitHub</a>!
+      No data is transmitted across the internet.<br>
+      Contact <a href="mailto:samholford@gmail.com">Sam</a> for help.<br>
+      View on <a href="https://github.com/samholford/gonc-mdmer">GitHub</a>!
+      
     </footer>
   </body>
   <script src="converter.js" type="text/javascript"></script>
