--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="lib/pizzip-3.1.8.min.js"></script>
     <script src="lib/FileSaver-2.0.4.js"></script>
     <script src="lib/pizzip-utils-3.1.8.min.js"></script>
-    <script src="lib/officeParserBundle@5.1.0.js"></script>
+    <script src="lib/mammoth.browser.min.js"></script>
     <script src="lib/moment-2.30.1.min.js"></script>
   </head>
   <body>
